Bug 1802314 - Return a contrasting color for Infobackground in dark mode. r=spohl

Bug 1796849 implemented proper non-native tooltips so that we can draw
them in mismatched themes in GTK. That uses the InfoBackground /
InfoText color pair, which is the right color pair.

However on macOS InfoBackground didn't have dark-mode support (while
InfoText did), causing contrast issues.

Differential Revision: https://phabricator.services.mozilla.com/D163022